--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron": "^4.0.4",
     "electron-builder": "^20.39.0",
     "react-hot-loader": "^4.7.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
@@ -42,6 +43,8 @@
   },
   "dependencies": {
     "babel-core": "^6.26.3",
+    "bootstrap": "^4.3.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
