--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.0",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
+    "babel-preset-flow": "^6.23.0",
     "css-loader": "^2.1.0",
     "electron": "^4.0.4",
     "electron-builder": "^20.39.0",
+    "font-awesome-loader": "^1.0.2",
     "react-hot-loader": "^4.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -44,9 +50,14 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "bootstrap": "^4.3.1",
+    "download": "^7.1.0",
+    "electron-dl": "^1.13.0",
+    "electron-reload": "^1.4.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-jsonschema-form": "^1.3.0",
+    "react-markdown": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "reactn": "^1.0.0",
     "yarn": "^1.13.0"
