--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "electron-react-boilerplate-minimal",
-  "version": "1.0.0",
-  "description": "An Electron, React, and Redux boilerplate for minimalists.",
+  "name": "sc2-campaign-manager",
+  "version": "0.1.0",
+  "description": "A Campaign Manager for StarCraft II.  ",
   "main": "main.js",
   "build": {
-    "appId": "electron-react-boilerplate-minimal",
+    "appId": "sc2-campaign-manager",
     "mac": {
       "category": "demo.app"
-    }
+	},
+	"win":{
+		"target": "zip"
+	}
   },
   "scripts": {
     "dev": "webpack --watch",
     "start": "electron .",
     "build": "webpack && electron-builder"
   },
-  "repository": "https://github.com/f-prime/electron-react-boilerplate-minimal",
+  "repository": "https://github.com/abrahamYG/sc2-campaign-manager",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
+    "Starcraft",
     "demo"
   ],
-  "author": "f-prime",
+  "author": "abrahamYG",
   "license": "CC0-1.0",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -32,6 +32,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
@@ -42,18 +43,28 @@
     "font-awesome-loader": "^1.0.2",
     "react-hot-loader": "^4.7.0",
     "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "typescript": "^3.4.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@types/debug": "^4.1.3",
+    "@types/electron": "^1.6.10",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-router-dom": "^4.3.1",
     "babel-core": "^6.26.3",
     "bootstrap": "^4.3.1",
     "download": "^7.1.0",
     "electron-dl": "^1.13.0",
     "electron-reload": "^1.4.0",
+    "fs-extra": "^7.0.1",
+    "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-jsonschema-form": "^1.3.0",
