--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "appId": "sc2-campaign-manager",
     "mac": {
       "category": "demo.app"
-	},
-	"win":{
-		"target": "zip"
-	}
+    },
+    "win": {
+      "target": "zip"
+    }
   },
   "scripts": {
     "dev": "webpack --watch",
@@ -62,6 +62,7 @@
     "electron-dl": "^1.13.0",
     "electron-reload": "^1.4.0",
     "fs-extra": "^7.0.1",
+    "immutability-helper": "^3.0.0",
     "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.15.0",
@@ -71,6 +72,7 @@
     "react-markdown": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "reactn": "^1.0.0",
-    "yarn": "^1.13.0"
+    "yarn": "^1.13.0",
+    "yauzl": "^2.10.0"
   }
 }
