--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "scripts": {
     "dev": "webpack --watch",
-    "start": "electron .",
+    "start": "concurrently \"npm:webpack\" \"npm:electron\"",
+    "webpack": "webpack --watch",
+    "electron": "electron .",
     "build": "webpack && electron-builder"
   },
   "repository": "https://github.com/abrahamYG/sc2-campaign-manager",
@@ -58,6 +60,7 @@
     "@types/react-router-dom": "^4.3.1",
     "babel-core": "^6.26.3",
     "bootstrap": "^4.3.1",
+    "concurrently": "^4.1.0",
     "download": "^7.1.0",
     "electron-dl": "^1.13.0",
     "electron-reload": "^1.4.0",
@@ -66,9 +69,11 @@
     "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.15.0",
+    "rage-edit": "^1.2.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-jsonschema-form": "^1.3.0",
+    "react-lightbox-component": "^1.2.1",
     "react-markdown": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "reactn": "^1.0.0",
