--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,11 @@
 		{
 			"type": "npm",
 			"script": "build",
-			"problemMatcher": []
+			"problemMatcher": [],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		},
 		{
 			"type": "npm",
