--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-preset-flow": "^6.23.0",
     "css-loader": "^2.1.0",
     "electron": "^4.0.4",
-    "electron-builder": "^20.39.0",
+    "electron-builder": "^20.41.0",
     "font-awesome-loader": "^1.0.2",
     "foreman": "^3.0.1",
     "react-hot-loader": "^4.7.0",
@@ -77,6 +77,7 @@
     "react-dom": "^16.8.2",
     "react-images": "^0.5.19",
     "react-jsonschema-form": "^1.3.0",
+    "react-jsonschema-form-bs4": "^1.5.1",
     "react-lightbox-component": "^1.2.1",
     "react-markdown": "^4.0.6",
     "react-router-dom": "^4.3.1",
