--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^2.1.0",
     "electron": "^4.0.4",
     "electron-builder": "^20.41.0",
+    "electron-devtools-installer": "^2.2.4",
     "font-awesome-loader": "^1.0.2",
     "foreman": "^3.0.1",
     "react-hot-loader": "^4.7.0",
@@ -56,10 +57,12 @@
   "dependencies": {
     "@types/debug": "^4.1.3",
     "@types/electron": "^1.6.10",
+    "@types/lodash": "^4.14.130",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
     "@types/react-images": "^0.5.1",
     "@types/react-jsonschema-form": "^1.3.2",
+    "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.1",
     "babel-core": "^6.26.3",
     "bootstrap": "^4.3.1",
@@ -70,18 +73,20 @@
     "fs-extra": "^7.0.1",
     "immutability-helper": "^3.0.0",
     "jquery": "^3.4.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "popper.js": "^1.15.0",
     "rage-edit": "^1.2.0",
-    "react": "^16.8.2",
+    "react": "^16.8.6",
     "react-dom": "^16.8.2",
     "react-images": "^0.5.19",
     "react-jsonschema-form": "^1.3.0",
     "react-jsonschema-form-bs4": "^1.5.1",
     "react-lightbox-component": "^1.2.1",
     "react-markdown": "^4.0.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
-    "reactn": "^1.0.0",
+    "redux": "^4.0.1",
     "yarn": "^1.13.0",
     "yauzl": "^2.10.0"
   }
