--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@types/debug": "^4.1.3",
+    "@types/download": "^6.2.4",
     "@types/electron": "^1.6.10",
     "@types/lodash": "^4.14.130",
     "@types/react": "^16.8.13",
@@ -64,6 +65,7 @@
     "@types/react-jsonschema-form": "^1.3.2",
     "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "@types/yauzl": "^2.9.1",
     "babel-core": "^6.26.3",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
