tweaked tasks.json for vscode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,12 +15,17 @@
 		{
 			"type": "npm",
 			"script": "electron",
-			"problemMatcher": []
+			"problemMatcher": [],
+			"group": "test"
 		},
 		{
 			"type": "npm",
 			"script": "dev",
-			"problemMatcher": []
+			"problemMatcher": [],
+			"group": {
+				"kind": "test",
+				"isDefault": true
+			}
 		}
 	]
 }
