--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/debug": "^4.1.3",
     "@types/download": "^6.2.4",
     "@types/electron": "^1.6.10",
+    "@types/fs-extra": "^7.0.0",
     "@types/lodash": "^4.14.130",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
